--- a/pad/Dashboard.html
+++ b/pad/Dashboard.html
@@ -6,6 +6,13 @@
   <title>Dashboard do Usuário</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+<header>
+    <nav>
+      <a href="pad/Cadastro.html"><button>Cadastro</button></a>
+      <a href="Login.html"><button>Login</button></a>
+      <a href="Servicos.html"><button>Serviços</button></a>
+    </nav>
+  </header>
 <body>
   <div class="dashboard">
     <h1>Dashboard do Usuário</h1>
@@ -13,5 +20,9 @@
     <h2>Serviços Contratados</h2>
     <!-- Listar serviços contratados -->
   </div>
+</body>
+</html>
+    <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
