--- a/pad/Cadastro.html
+++ b/pad/Cadastro.html
@@ -3,18 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro</title>
-  <link rel="stylesheet" href="cadastro.css">
+  <title>Plataforma PAD</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="cadastro">
-    <h1>Cadastro</h1>
-    <form>
-      <input type="text" placeholder="Nome" required>
-      <input type="email" placeholder="E-mail" required>
-      <input type="password" placeholder="Senha" required>
-      <button type="submit">Cadastrar</button>
-    </form>
-  </div>
-</body>
-</html>
+  <header>
+    <nav>
+      <a href="pad/Dashboard.html"><button>Dashboard</button></a>
+      <a href="pad/Login.html"><button>Login</button></a>
+      <a href="pad/Servicos.html"><button>Serviços</button></a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="cadastro">
+      <h1>Cadastro</h1>
+      <form>
+        <input type="text" placeholder="Nome" required>
+        <input type="email" placeholder="E-mail" required>
+        <input type="password" placeholder="Senha" required>
+        <button type="submit">Cadastrar</button>
+      </form>
+    </section>
+    <footer>
+      <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
+    </footer>
+  </body>
+  </html>
