--- a/pad/Login.html
+++ b/pad/Login.html
@@ -3,17 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Plataforma PAD</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="login">
+  <header>
+    <nav>
+      <a href="pad/Dashboard.html"><button>Dashboard</button></a>
+      <a href="pad/Login.html"><button>Login</button></a>
+      <a href="pad/Servicos.html"><button>Serviços</button></a>
+    </nav>
+  </header>
+  <section class="login">
     <h1>Login</h1>
     <form>
       <input type="email" placeholder="E-mail" required>
       <input type="password" placeholder="Senha" required>
       <button type="submit">Entrar</button>
     </form>
-  </div>
+  </section>
+  <footer>
+    <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
