--- a/pad/Servicos.html
+++ b/pad/Servicos.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serviços Disponíveis</title>
+  <title>Plataforma PAD</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="servicos">
+  <header>
+    <nav>
+      <a href="pad/Dashboard.html"><button>Dashboard</button></a>
+      <a href="pad/Login.html"><button>Login</button></a>
+      <a href="pad/Servicos.html"><button>Serviços</button></a>
+    </nav>
+  </header>
+  <section class="servicos">
     <h1>Serviços Disponíveis</h1>
     <ul>
       <li>
@@ -21,6 +28,10 @@
         <button>Agendar</button>
       </li>
     </ul>
-  </div>
+  </section>
+</main>
+<footer>
+  <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
