--- a/pad/Servicos.html
+++ b/pad/Servicos.html
@@ -4,15 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plataforma PAD</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <nav>
-      <a href="pad/Dashboard.html"><button>Dashboard</button></a>
-      <a href="pad/Login.html"><button>Login</button></a>
-      <a href="pad/Servicos.html"><button>Serviços</button></a>
-    </nav>
+    <a href="">Perquisar</a>
+
   </header>
   <section class="servicos">
     <h1>Serviços Disponíveis</h1>
@@ -20,16 +17,20 @@
       <li>
         <h2>Limpeza</h2>
         <p>Limpeza geral da casa</p>
-        <button>Agendar</button>
+        <p>R$10 a hora</p>
+        <p>Tania Moreira</p>
+        <button>Ver</button>
       </li>
       <li>
         <h2>Jardinagem</h2>
         <p>Cuidados com o jardim</p>
-        <button>Agendar</button>
+        <p>R$15 a hora</p>
+        <p>Carlos Matoso</p>
+        <button>Ver</button>
       </li>
     </ul>
   </section>
-</main>
+  </main>
 <footer>
   <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
 </footer>
