--- a/pad/Cadastro.html
+++ b/pad/Cadastro.html
@@ -4,27 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plataforma PAD</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <nav>
-      <a href="pad/Dashboard.html"><button>Dashboard</button></a>
-      <a href="pad/Login.html"><button>Login</button></a>
-      <a href="pad/Servicos.html"><button>Serviços</button></a>
-    </nav>
+    <a>Perquisar </a>
   </header>
-
-  <main>
-    <section class="cadastro">
-      <h1>Cadastro</h1>
-      <form>
-        <input type="text" placeholder="Nome" required>
-        <input type="email" placeholder="E-mail" required>
-        <input type="password" placeholder="Senha" required>
-        <button type="submit">Cadastrar</button>
-      </form>
-    </section>
+</header>
+  <section class="cadastro">
+    <h1>Cadastro</h1>
+    <form>
+      <label for="nome">Nome: </label>
+      <input type="text" id="Nome">
+      <label for="cpf">CPF: </label>
+      <input type="text" id="cpf">
+      <label for="email">Email: </label>
+      <input type="email" id="E-mail">
+      <label for="telefone">Telefone: </label>
+      <input type="text" id="telefone">
+      <label for="endereco">Endereço</label>
+      <input type="text" id="endereço">
+      <label for="senha">Senha</label>
+      <input type="password" id="Senha">
+      <div class="botao">
+      <a id="botao-cadastrar" href="Servicos.html">Cadastrar</a>
+    </div>
+    </form>
+  </section>
+  <footer>
     <footer>
       <p>&copy; 2023 Plataforma PAD. Todos os direitos reservados.</p>
     </footer>
